--- a/1. Introduccion a las series temporales/Python/1_Python_Introducción_a_las_series_temporales.ipynb
+++ b/1. Introduccion a las series temporales/Python/1_Python_Introducción_a_las_series_temporales.ipynb
@@ -23,15 +23,25 @@
       "name": "1. Python - Introducción a las series temporales .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OBM-5VY7We9Q",
+        "id": "view-in-github",
         "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mreillor/curso-series-temporales/blob/master/1.%20Introduccion%20a%20las%20series%20temporales/Python/1_Python_Introducci%C3%B3n_a_las_series_temporales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OBM-5VY7We9Q"
       },
       "source": [
         "### Import the Packages"
@@ -40,9 +50,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c2yqjxGwWe9R",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c2yqjxGwWe9R"
       },
       "source": [
         "import pandas as pd \n",
@@ -51,14 +59,13 @@
         "#import seaborn as sns\n",
         "#sns.set()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CVxwiA8OWe9V",
-        "colab_type": "text"
+        "id": "CVxwiA8OWe9V"
       },
       "source": [
         "### Importing the Data"
@@ -67,34 +74,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2aZ4hKJkWe9V",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2aZ4hKJkWe9V"
       },
       "source": [
         "raw_csv_data = pd.read_csv(\"https://raw.githubusercontent.com/MaddoSaru/curso-series-temporales/master/1.%20Introduccion%20a%20las%20series%20temporales/Python/Index2018.csv\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jvS0nEFhWe9Y",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jvS0nEFhWe9Y"
       },
       "source": [
         "df_comp = raw_csv_data.copy()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vRP2uEONWe9a",
-        "colab_type": "text"
+        "id": "vRP2uEONWe9a"
       },
       "source": [
         "### Examining the Data"
@@ -105,7 +107,6 @@
       "metadata": {
         "scrolled": true,
         "id": "llUz-oOOWe9b",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -115,7 +116,7 @@
       "source": [
         "df_comp.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +212,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "yvRBeKE3We9e",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -221,7 +221,7 @@
       "source": [
         "df_comp"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,7 +375,6 @@
       "metadata": {
         "scrolled": true,
         "id": "ZrAUBCJ3We9i",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
@@ -499,7 +498,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "SWyYZP3bWe9l",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -509,7 +507,7 @@
       "source": [
         "df_comp.isna()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +660,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "CUs5klc4bhga",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -672,7 +669,7 @@
       "source": [
         "df_comp.isna().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +694,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "4gygofroWe9o",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -707,7 +703,7 @@
       "source": [
         "df_comp.spx.isna().sum()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,8 +722,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Qa0G2oeWWe9q",
-        "colab_type": "text"
+        "id": "Qa0G2oeWWe9q"
       },
       "source": [
         "### Plotting the Data"
@@ -736,14 +731,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wAAq3k0fWe9r",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wAAq3k0fWe9r"
       },
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -751,7 +744,6 @@
       "metadata": {
         "scrolled": false,
         "id": "Ovp4vaH0We9t",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
@@ -762,7 +754,7 @@
         "df_comp.spx.plot(figsize=(20,5), title = \"S&P500 Prices\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -783,7 +775,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "2R3l-1dUWe9w",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
@@ -816,7 +807,6 @@
       "metadata": {
         "scrolled": false,
         "id": "5d3gqOcJWe9z",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
@@ -849,8 +839,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-DlvG_FYWe91",
-        "colab_type": "text"
+        "id": "-DlvG_FYWe91"
       },
       "source": [
         "### The QQ Plot"
@@ -859,21 +848,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Rk7JNzWiWe92",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Rk7JNzWiWe92"
       },
       "source": [
         "import scipy.stats"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "EJ0OTP3yWe95",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
@@ -885,7 +871,7 @@
         "plt.title(\"QQ Plot\", size = 24)\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
